# dbt_test_01_01_01

./: pyproject.toml
jaffle_shop/: dbt_project.yml
jaffle_shop/models/: branded_products.sql  created_offers.sql  deleted_offers.sql  oos_orders.sql  schema.yml
jaffle_shop/models/example/: my_first_dbt_model.sql
jaffle_shop/models/staging/: stg_chain_partners.sql  stg_product_name.sql
