[project]
name = "dbt-test-01"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = "=3.10.13"
dependencies = [
    "dbt-core (>=1.10.9,<2.0.0)",
    "dbt-bigquery (>=1.10.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
